fix: Corrige problema de variáveis de ambiente em produção
- Adiciona script build.sh para build manual com build args
- Remove seção build do docker-compose.yml (Swarm não suporta build args)
- Atualiza DEPLOY.md com instruções corretas usando build.sh

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,7 @@ version: "3.7"
 
 services:
   app:
-    # Build da imagem a partir do Dockerfile local
-    build:
-      context: .
-      dockerfile: Dockerfile
-      args:
-        VITE_SUPABASE_URL: ${VITE_SUPABASE_URL}
-        VITE_SUPABASE_ANON_KEY: ${VITE_SUPABASE_ANON_KEY}
+    # Usar imagem que foi buildada com o script build.sh
     image: conceitolead_hub:latest
     networks:
       - nddNet
